--- a/inventory.ini
+++ b/inventory.ini
@@ -18,3 +18,7 @@ shipping.tharun78daws84s.site
 rabbitmq.tharun78daws84s.site
 [payment]
 payment.tharun78daws84s.site
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
