--- a/inventory.ini
+++ b/inventory.ini
@@ -22,3 +22,4 @@ payment.tharun78daws84s.site
 [all:vars]
 ansible_user=ec2-user
 ansible_password=DevOps321
+# here instead of giving the username and password in the command shell we can provide here.
