--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -2,3 +2,4 @@ CATALOGUE_HOST: catalogue.tharun78daws84s.site
 USER_HOST: user.tharun78daws84s.site
 CART_HOST: cart.tharun78daws84s.site
 SHIPPING_HOST: shipping.tharun78daws84s.site
+PAYMENT_HOST: payment.tharun78daws84s.site
