--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -22,11 +22,13 @@
   ansible.builtin.command: mongosh --host mongodb.tharun78daws84s.site --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: print catalogue output
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.tharun78daws84s.site < /app/db/master-data.js
