--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -42,8 +42,8 @@
     tasks_from: systemd.yaml
 
 - name: Deployment
-  # tags:
-  # - deployment
-  include_role:
+  tags:
+  - deployment
+  import_role:
     name: common
     tasks_from: deployment
