--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -21,20 +21,20 @@
 - name: check products loaded or not
   ansible.builtin.command: mongosh --host mongodb.tharun78daws84s.site --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
-  ignore_errors: true
-  ignore_unreachable: true
+  # ignore_errors: true
+  # ignore_unreachable: true
 
 - name: print catalogue output
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
-  ignore_errors: true
-  ignore_unreachable: true
+  # ignore_errors: true
+  # ignore_unreachable: true
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.tharun78daws84s.site < /app/db/master-data.js
   when: catalogue_output.stdout | int < 0
-  ignore_errors: true
-  ignore_unreachable: true
+  # ignore_errors: true
+  # ignore_unreachable: true
 
 - name: systemd setup
   include_role:
@@ -42,8 +42,8 @@
     tasks_from: systemd.yaml
 
 - name: Deployment
-  # tags:
-  # - deployment
+  tags:
+  - deployment
   import_role:
     name: common
     tasks_from: deployment
